TestCases/Errors/Haversine/observations/sst/spr_06_obs.spm
obs r5-c14 0.004
obs r5-c15 0.005
obs r2-c19 0.000262605042016807
obs r3-c19 0.0019047619047619
obs r1-c20 0.0124628822633629
obs r2-c20 0.00831374624243894
obs r3-c20 0.00546560846560847
obs r4-c20 0.00380952380952381
obs r1-c21 0.0106136686558681
obs r3-c21 0.00205357142857143
obs r2-c22 0.00380952380952381
obs r3-c22 0.00380952380952381
error_value r5-c14 0.2
error_value r5-c15 0.2
error_value r2-c19 0.2
error_value r3-c19 0.2
error_value r1-c20 0.2
error_value r2-c20 0.2
error_value r3-c20 0.2
error_value r4-c20 0.2
error_value r1-c21 0.2
error_value r3-c21 0.2
error_value r2-c22 0.2
error_value r3-c22 0.2
